# haskell-gf-example

./: CHANGELOG.md  README.md  haskell-gf-example.cabal
app/: Main.hs
src/: HaskellGfExample.hs
