cabal-version:       2.4
name:                haskell-gf-example
version:             0.0.0.0
synopsis:            An example of using Grammatical Framework with Haskell
description:         An example of using Grammatical Framework with Haskell
homepage:            https://github.com/anka-213/haskell-gf-example
bug-reports:         https://github.com/anka-213/haskell-gf-example/issues
license:             MIT
license-file:        LICENSE
author:              Andreas Källberg
maintainer:          Andreas Källberg <anka.213@gmail.com>
copyright:           2020 Andreas Källberg
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/anka-213/haskell-gf-example.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellGfExample

executable haskell-gf-example
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-gf-example
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
